--- a/src/style/productPage.scss
+++ b/src/style/productPage.scss
@@ -1,3 +1,245 @@
-#product-page{
-    
+#product-page {
+  .loading {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    #loading {
+      margin: 0;
+    }
+  }
+  #main {
+    padding: 20rem 0 8rem 0;
+    .MuiPagination-root {
+      justify-content: center;
+      display: flex;
+      .MuiPagination-ul {
+        li {
+          margin-bottom: 0.6rem;
+          .MuiButtonBase-root,
+          .MuiPaginationItem-text {
+            color: #fff !important;
+            width: 5rem;
+            height: 5rem;
+            border-radius: 0;
+            background: #353535;
+            line-height: 5rem;
+            font-size: 1.4rem;
+            &.Mui-selected {
+              background: #fcd462;
+            }
+            &:hover {
+              background: rgba(252, 212, 98, 0.8);
+            }
+          }
+        }
+      }
+    }
+    .item {
+      padding: 0;
+    }
+    .filter-wraper {
+      .heading {
+        margin-bottom: 3rem;
+        button {
+          width: 100%;
+        }
+      }
+
+      .filter-item {
+        padding: 4rem 2rem;
+        margin-bottom: 4rem;
+        &:hover {
+          .title {
+            h2 {
+              -webkit-text-stroke: 0;
+              color: #fcd462;
+              // &::before {
+              //   width: 100%;
+              //   left: 3rem;
+              //   filter: drop-shadow(0 0 2.5rem #fcd462);
+              // }
+            }
+          }
+        }
+        .title {
+          position: relative;
+          overflow: hidden;
+          h2 {
+            font-weight: 700;
+            text-transform: uppercase;
+            line-height: 2rem;
+            letter-spacing: 0.3rem;
+            margin-bottom: 3rem;
+            color: #a3a3a3;
+            display: inline-block;
+            font-size: 1.4rem;
+            padding-left: 3rem;
+            border-left: 0.2rem solid #fcd462;
+            // position: relative;
+            // color: transparent;
+            // -webkit-text-stroke: 0.1rem rgba(255, 255, 255, 0.5);
+            // &::before {
+            //   content: attr(data-text);
+            //   position: absolute;
+            //   color: #fcd462;
+            //   width: 0;
+            //   left: 0;
+            //   overflow: hidden;
+            //   transition: 1s;
+            //   border-right: 0.8rem solid #fcd462;
+            //   -webkit-text-stroke: 0.1rem #fcd462;
+            // }
+          }
+          i {
+            margin-left: 0.8rem;
+            display: none;
+          }
+        }
+        .content {
+          form {
+            label {
+              position: relative;
+              display: block;
+              padding-left: 3rem;
+              margin-bottom: 1rem;
+              cursor: pointer;
+              line-height: 1.4;
+              text-transform: capitalize;
+              input[type="checkbox"] {
+                display: none;
+                &:checked ~ .custom-checkbox {
+                  border: 0.1rem solid #fcd462;
+                  background-color: #fcd462;
+                  &::after {
+                    display: block;
+                  }
+                }
+              }
+              .custom-checkbox {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 2rem;
+                height: 2rem;
+                background-color: #272626;
+                border-radius: 0;
+                border: 0.1rem solid #444444;
+                &::after {
+                  left: 0.6rem;
+                  top: 0.4rem;
+                  width: 0.5rem;
+                  height: 1rem;
+                  border: 1px solid #fff;
+                  border-width: 0 0.2rem 0.2rem 0;
+                  transform: rotate(45deg);
+                  content: "";
+                  position: absolute;
+                  display: none;
+                }
+              }
+            }
+          }
+          ul {
+            li {
+              display: inline-block;
+              margin-right: 0.5rem;
+              margin-bottom: 1rem;
+              a {
+                font-size: 1.2rem;
+                color: #fff;
+                padding: 1rem 1.5rem;
+                background-color: #272626;
+              }
+            }
+          }
+          .MuiBox-root {
+            .text {
+              .value {
+                color: #fcd462;
+                font-size: 1.6rem;
+                margin: 0 0.6rem;
+              }
+            }
+          }
+        }
+      }
+    }
+    .shop-wraper {
+      .heading {
+        p {
+          text-transform: capitalize;
+          span {
+            color: #fcd462;
+            padding: 0 0.6rem;
+            font-size: 1.6rem;
+            font-weight: 500;
+          }
+        }
+      }
+    }
+  }
 }
+
+//responsive
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1200px) {
+}
+
+@media screen and (max-width: 992px) {
+  #product-page {
+    #main {
+      .row {
+        justify-content: center;
+      }
+      .filter-wraper {
+        margin-bottom: 5rem;
+        .filter-item {
+          padding: 1rem 2rem;
+          margin-bottom: 1rem;
+          .title {
+            justify-content: space-between;
+            display: flex;
+            h2 {
+              margin-bottom: 0;
+            }
+            .icon {
+              transition: all 0.1s;
+              &.active {
+                transform: rotate(90deg);
+              }
+              &:hover {
+                i {
+                  color: #fcd462;
+                }
+              }
+              i {
+                display: inline-block;
+                cursor: pointer;
+                padding: 0.2rem 1rem;
+              }
+            }
+          }
+          .content {
+            height: 0;
+            overflow: hidden;
+            transition: 0.3s;
+            &.active {
+              margin-top: 2rem;
+              height: 15rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 576px) {
+}
+//
