--- a/src/style/components/loading.scss
+++ b/src/style/components/loading.scss
@@ -7,7 +7,7 @@
     .z{
     width: 33%;
     height: 33%;
-    background-color: #fcd462;
+    background-color: var(--primary-color);
     float: left;
     -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
             animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
