--- a/src/style/components/modal.scss
+++ b/src/style/components/modal.scss
@@ -1,8 +1,5 @@
-@mixin flex-cen {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+@import '../__global/_config.scss';
+
 
 @keyframes modal {
   0% {
@@ -34,7 +31,7 @@
   height: 6rem;
   z-index: 9999999999;
   &:hover {
-    color: #fcd462;
+    color: var(--primary-color);
   }
 }
 
@@ -43,9 +40,7 @@
   .modal-wraper {
     display: none;
     &.active {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @include flex(center,center);
       position: fixed;
       top: 0;
       left: 0;
@@ -68,7 +63,7 @@
       margin: 0 2.4rem;
       .detail-img {
         height: 100%;
-        @include flex-cen;
+        @include flex(center,center);
         img {
           width: 100%;
           object-fit: cover;
@@ -81,7 +76,7 @@
         .product-rating {
           .rate-quantity {
             font-size: 1.2rem;
-            color: #fff;
+            color: var(--white);
             padding-left: 1rem;
           }
         }
@@ -93,7 +88,7 @@
         .other-info {
           display: flex;
           .info-item {
-            @include flex-cen;
+            @include flex(center,center);
             .text-red {
               color: red;
             }
@@ -108,7 +103,7 @@
         .color {
           label {
             margin-bottom: 0.8rem;
-            color: #fff;
+            color: var(--white);
             font-weight: 600;
           }
           .color-box {
@@ -122,9 +117,9 @@
               font-size: 1.2rem;
               position: relative;
               padding: 1rem 2rem;
-              color: #ffffff;
+              color: var(--white)fff;
               &:hover {
-                background-color: #fcd462;
+                background-color: var(--primary-color);
               }
             }
           }
@@ -133,7 +128,7 @@
           display: flex;
           max-height: 6rem;
           .quantity-box {
-            @include flex-cen;
+            @include flex(center,center);
             padding-right: 4rem;
             .minus,
             .plus,
@@ -143,14 +138,14 @@
             button {
               font-size: 3rem;
               &:hover {
-                background-color: #fcd462;
+                background-color: var(--primary-color);
               }
             }
             .number {
-              @include flex-cen;
+              @include flex(center,center);
               padding: 0 2rem;
               background-color: #272626;
-              color: #fff;
+              color: var(--white);
               min-width: 7rem;
             }
           }
@@ -170,7 +165,7 @@
               margin-right: 1rem;
               font-family: "Roboto";
               a {
-                color: #a3a3a3;
+                color: var(--gray-1);
                 font-weight: 400;
               }
             }
@@ -192,7 +187,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    @include flex-cen;
+    @include flex(center,center);
     z-index: 9999999999;
     background: #1c1b19;
     height: 100vh;
@@ -206,7 +201,7 @@
   .modal-wraper {
     .login-img {
       position: relative;
-      @include flex-cen;
+      @include flex(center,center);
       .img {
         width: 100%;
         img {
@@ -223,7 +218,7 @@
         h2 {
           margin-bottom: 2rem;
           font-weight: 600;
-          color: #fff;
+          color: var(--white);
           font-size: 3.6rem;
           text-transform: capitalize;
         }
@@ -244,13 +239,13 @@
       background-color: transparent;
       height: 100%;
       border: 0.1rem solid;
-      @include flex-cen;
+      @include flex(center,center);
       flex-direction: column;
       border-color: #40403b #40403b #40403b transparent;
       .title {
         font-size: 3.6rem;
         margin-bottom: 5rem;
-        color: #fff;
+        color: var(--white);
         font-weight: 600;
         text-transform: uppercase;
       }
@@ -264,13 +259,13 @@
             height: 6rem;
             padding: 0 5rem 0 3rem;
             background-color: #353530;
-            color: #a3a3a3;
+            color: var(--gray-1);
             width: 100%;
           }
         }
         .forgot-link {
           text-decoration: underline;
-          color: #fff;
+          color: var(--white);
           display: block;
           text-transform: capitalize;
         }
@@ -397,8 +392,7 @@
           }
           .tags {
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            @include flex(center,center);
           }
         }
       }
