--- a/src/style/pages/indexPage.scss
+++ b/src/style/pages/indexPage.scss
@@ -1,8 +1,4 @@
-@mixin flex-cen-bw {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+@import "../__global/_config.scss";
 
 @keyframes ImgScale {
   0% {
@@ -82,10 +78,8 @@
 
     .title-section {
       margin-bottom: 5rem;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      @include flex(center,center);
 
       img {
         width: 5rem;
@@ -110,7 +104,7 @@
             text-transform: uppercase;
             letter-spacing: 0.3rem;
             padding-bottom: 3rem;
-            color: #a3a3a3;
+            color: var(--gray-1);
             display: inline-block;
           }
 
@@ -189,15 +183,14 @@
             .img {
               width: 5rem;
               height: 5rem;
-              background-color: #fcd462;
+              background-color: var(--primary-color);
               margin-bottom: 2rem;
-              @include flex-cen-bw;
-              justify-content: center;
-              border-radius: .5rem;
+              @include flex(center, center);
+              border-radius: 0.5rem;
 
               img {
                 width: 100%;
-                border-radius: .5rem;
+                border-radius: 0.5rem;
               }
             }
 
@@ -210,7 +203,7 @@
             }
 
             p {
-              color: #a3a3a3;
+              color: var(--gray-1);
               position: relative;
               z-index: 99;
             }
@@ -244,7 +237,7 @@
 
           .img {
             img {
-            border-radius: .5rem;
+              border-radius: 0.5rem;
               width: 7rem;
               height: 7rem;
               margin-bottom: 2rem;
@@ -279,9 +272,8 @@
         z-index: 99;
         padding: 0 5rem;
         height: 100%;
-        @include flex-cen-bw;
+        @include flex(center, center);
         flex-direction: column;
-        justify-content: center;
       }
 
       .about-bg {
@@ -358,7 +350,7 @@
                 height: 5rem;
                 padding: 1rem;
                 border-radius: 50%;
-                background-color: #fff;
+                background-color: var(--white);
               }
             }
 
@@ -375,8 +367,7 @@
       padding: 10rem 0 8rem 0;
 
       .count-item {
-        @include flex-cen-bw;
-        justify-content: center;
+        @include flex(center, center);
         flex-direction: column;
 
         .count-icon {
@@ -444,16 +435,14 @@
         bottom: 0;
         opacity: 0;
         visibility: hidden;
-        @include flex-cen-bw;
-        justify-content: center;
+        @include flex(center, center);
         z-index: 999999;
         &.active {
           opacity: 1;
           visibility: visible;
         }
         .video-wraper {
-          @include flex-cen-bw;
-          justify-content: center;
+          @include flex(center, center);
           flex-direction: column;
           position: relative;
         }
@@ -489,8 +478,7 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          @include flex-cen-bw;
-          justify-content: center;
+          @include flex(center, center);
           border-radius: 50%;
           &::after {
             position: absolute;
@@ -532,7 +520,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        background: #fcd462;
+        background: var(--primary-color);
         height: 100%;
         img {
           width: 100%;
@@ -690,7 +678,7 @@
           position: absolute;
           top: 0;
           left: 0;
-          background: #fcd462;
+          background: var(--primary-color);
           height: 35rem;
         }
       }
