--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import "./style/__global/_config.scss";
 * {
   margin: 0;
   padding: 0;
@@ -93,50 +94,102 @@ ul {
   margin: 0 -1.5rem !important;
 }
 
-.main-btn {
+.btn{
   position: relative;
-  display: inline-block;
+
+  display: grid;
+  place-items: center;
   font-weight: 700;
-  text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
-  padding: 0 4.8rem;
-  line-height: 6rem;
+  height: 6rem;
+  min-width: 16rem;
   border-radius: 0;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
-  color: var(--gray-1);
-  border: 0.2rem solid var(--primary-color);
   overflow: hidden;
   font-family: "Rubik", sans-serif !important;
+  font-size: 1.2rem;
+}
+.main-btn {
+  color: var(--gray-1);
+  border: 0.2rem solid var(--primary-color);
+  & > span {
+    position: relative;
+    color: var(--primary-color);
+  }
+  &:hover > span {
+    color: var(--white);
+  }
+  &::before {
+    background-color: var(--primary-color);
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transform: rotate(-90deg) translateX(-25%);
+    transform-origin: -10% 100%;
+    transition: all 0.25s;
+    width: 200%;
+  }
+  &:hover:before {
+    transform: rotate(0) translateX(-25%);
+  }
 }
 
-.main-btn > span {
-  position: relative;
-  color: var(--primary-color);
+.border-btn {
+  border: none;
+  padding: .2rem;
+  white-space: nowrap;
+  span{
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    @include flex(center,center);
+    background-color: #000;
+  }
+  &:hover > span {
+    color: var(--primary-color);
+  }
+  &::after {
+    content: "";
+    height: 40rem;
+    width: 40rem;
+    position: absolute;
+    background-image: conic-gradient(
+      transparent,
+      transparent,
+      transparent,
+      #00ffad
+    );
+    animation: rotage 4s linear infinite;
+  }
+  &::before {
+    content: "";
+    height: 40rem;
+    width: 40rem;
+    position: absolute;
+    background-image: conic-gradient(
+      transparent,
+      transparent,
+      transparent,
+      #00ccff
+    );
+    animation: rotage 4s linear -2s infinite;
+  }
 }
 
-.main-btn::before {
-  background-color: var(--primary-color);
-  content: "";
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  transform: rotate(-90deg) translateX(-25%);
-  transform-origin: -10% 100%;
-  transition: all 0.25s;
-  width: 200%;
-}
-
-.main-btn:hover > span {
-  color: var(--white);
-}
-
-.main-btn:hover:before {
-  transform: rotate(0) translateX(-25%);
+@keyframes rotage {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .imagesiny {
