--- a/src/style/pages/indexPage.scss
+++ b/src/style/pages/indexPage.scss
@@ -59,6 +59,7 @@
   #main {
     .title {
       margin-bottom: 3rem;
+      width: 100%;
 
       span {
         font-weight: 700;
@@ -79,7 +80,7 @@
     .title-section {
       margin-bottom: 5rem;
       flex-direction: column;
-      @include flex(center,center);
+      @include flex(center, center);
 
       img {
         width: 5rem;
@@ -89,11 +90,10 @@
 
     .link {
       margin-top: 3rem;
-      display: inline-block;
     }
 
     .banner {
-      padding-top: 30rem;
+      padding-top: 24rem;
 
       .col-left-wraper {
         padding: 0 3.8rem 0 0;
@@ -138,6 +138,10 @@
       .col-right-wraper {
         padding: 0 0 0 1.6rem;
 
+        .slick-slide ::after {
+          content: "";
+          clear: both;
+        }
         .slick-arrow {
           display: none !important;
         }
@@ -149,13 +153,15 @@
             width: 100%;
             height: 100%;
             margin-right: 0;
-            animation: ImgScale 5s linear 0.5s infinite;
+            // animation: ImgScale 5s linear 0.5s infinite;
           }
         }
       }
     }
 
     .category-box {
+      position: relative;
+      top: -0.5rem;
       .category-box-wraper {
         padding: 4rem 4rem 1rem;
 
@@ -224,7 +230,7 @@
     }
 
     .about {
-      padding: 11rem 0;
+      padding: 8rem 0;
       position: relative;
 
       .col-left-wraper {
@@ -300,13 +306,17 @@
     }
 
     .selling {
-      padding: 10rem 0;
+      padding: 8rem 0;
       position: relative;
 
       .sell-sub-img {
         position: absolute;
         bottom: -60%;
         left: -22rem;
+      }
+      .col-left-wraper {
+        @include flex(center, unset);
+        flex-direction: column;
       }
 
       .col-right-wraper {
@@ -318,7 +328,7 @@
 
     .products {
       position: relative;
-      padding: 7rem 0 9rem 0;
+      padding: 8rem 0 5rem 0;
       overflow: hidden;
       .products-wraper {
         margin: 0 -1.5rem;
@@ -326,7 +336,7 @@
     }
 
     .services {
-      padding: 11.5rem 0 8.5rem;
+      padding: 8rem 0 5rem;
       .services-content {
         .item-wraper {
           margin-bottom: 3rem;
@@ -364,7 +374,7 @@
     }
 
     .counter-section {
-      padding: 10rem 0 8rem 0;
+      padding: 8rem 0 5rem 0;
 
       .count-item {
         @include flex(center, center);
@@ -388,7 +398,7 @@
     }
 
     .on-sale {
-      padding: 11.5rem 0 8.5rem;
+      padding: 8rem 0 6rem;
 
       .on-sale-content {
         .col-wraper {
@@ -425,7 +435,7 @@
     }
 
     .video {
-      padding: 11rem 0;
+      padding: 8rem 0;
       position: relative;
       .modal-video {
         position: fixed;
@@ -529,7 +539,7 @@
       }
     }
     .news-feeds {
-      padding: 11rem 0;
+      padding: 8rem 0;
       .news-content {
         margin: 0 -1.5rem;
         .news-item {
@@ -690,6 +700,9 @@
   #index-page {
     #main {
       .banner {
+        .col-left-wraper {
+          padding-right: 0;
+        }
         .col-right-wraper {
           display: none;
         }
