--- a/src/App.scss
+++ b/src/App.scss
@@ -183,6 +183,26 @@ ul {
   }
 }
 
+.logo-link {
+  @include flex(center, unset);
+  img {
+    width: 7rem;
+  }
+  .logo-text {
+    margin-left: 1.2rem;
+    .title {
+      display: block;
+      font-size: 2rem;
+      color: var(--primary-color);
+    }
+    .sub-title {
+      text-transform: uppercase;
+      letter-spacing: 0.2rem;
+      font-size: 1rem;
+    }
+  }
+}
+
 @keyframes rotage {
   0% {
     transform: rotate(0deg);
