--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -1,4 +1,4 @@
-@import '../__global/_config.scss';
+@import "../__global/_config.scss";
 //CSS
 header {
   position: absolute;
@@ -32,11 +32,6 @@ header {
       margin: 0 2.4rem;
       position: relative;
       @include flex(center, space-between);
-      .hd-logo {
-        img {
-          width: 12rem;
-        }
-      }
       .hd-nav {
         .nav-menu {
           @include flex(center, unset);
@@ -131,11 +126,11 @@ header {
               }
             }
             .menu-item-link {
-              width: 6.5rem;
-              height: 6.5rem;
+              width: 5.5rem;
+              height: 5.5rem;
               border: 0.2rem solid rgba(133, 133, 133, 0.2);
               text-align: center;
-              line-height: 6.5rem;
+              line-height: 5.5rem;
               padding: 0;
               color: var(--white);
               font-size: 2.4rem;
@@ -373,143 +368,157 @@ header {
       }
     }
   }
-  .header-mobile.main-hd {
+  .main-hd.header-mobile {
     display: none;
-    .hd-menu {
-      .menu-list {
-        .menu-item.mobile {
-          &:hover {
-            .close {
-              background: red !important;
-            }
-          }
-          .menu-item-link {
-            display: none;
-            z-index: 999999;
-            &.active {
-              display: block;
-            }
-          }
-          .menu-mobile {
-            position: fixed;
-            left: 0;
-            top: -0.1rem;
-            width: 0;
-            opacity: 0;
-            visibility: hidden;
-            transition: 0.5s;
-            z-index: 99999;
-            &.active {
-              height: 100vh;
-              width: 30rem;
-              opacity: 1;
-              visibility: visible;
-              overflow-y: auto;
-            }
-            .menu-inner {
-              height: 100%;
-              position: relative;
-              padding: 3rem 3rem 7rem;
-              .menu-btn {
-                @include flex(center, flex-start);
-                margin-bottom: 1.6rem;
-                .search-mb {
-                  position: relative;
-                  width: 100%;
-                  .input-group {
-                    input {
-                      position: relative;
-                      height: 5rem;
-                      width: 5rem;
-                      background: transparent;
-                      border-radius: 0;
-                      border: 0.2rem solid #40403b;
-                      color: var(--white);
-                      outline: none;
-                      transition: all 0.5s;
-                      color: transparent;
-                      &:focus {
-                        width: 100%;
-                        padding: 1.6rem;
-                        padding-left: 4rem;
-                        border-color: var(--primary-color);
-                        outline-color: var(--primary-color);
-                        color: var(--white);
-                        background-position: 1rem 50%;
-                      }
-                      background: url(https://i.postimg.cc/YCgV9bkN/image.png)
-                        no-repeat;
-                      background-size: 2.6rem;
-                      background-position: 45% 50%;
-                    }
-                  }
-                  .search-mb-result {
-                    margin-top: 1.6rem;
-                    position: absolute;
-                    top: 5;
-                    left: 0;
-                    width: 100%;
-                    img {
-                      width: 100%;
-                    }
-                    .mb-result-wraper {
-                      height: calc(100vh - 8rem);
-                      overflow-x: hidden;
-                      overflow-y: auto;
-                      .item{
-                        padding-left: 0;
-                      }
-                    }
-                  }
-                }
+    .main-hd-wraper {
+      .hd-menu {
+        .menu-list {
+          .menu-item.mobile {
+            &:hover {
+              .close {
+                background: red !important;
               }
-
-              .menu-list {
-                flex-direction: column;
-                li {
-                  width: 100%;
-                  .link-wraper,
-                  .menu-link {
-                    padding: 1.3rem 0 1.5rem 0;
-                    width: 100%;
-                    &.cate {
-                      cursor: default;
+            }
+            .menu-item-link {
+              display: none;
+              z-index: 999999;
+              &.active {
+                display: block;
+              }
+            }
+            .menu-mobile {
+              position: fixed;
+              left: 0;
+              top: -0.1rem;
+              width: 0;
+              opacity: 0;
+              visibility: hidden;
+              transition: 0.5s;
+              z-index: 99999;
+              &.active {
+                height: 100vh;
+                width: 30rem;
+                opacity: 1;
+                visibility: visible;
+                overflow-y: auto;
+              }
+              .menu-inner {
+                height: 100%;
+                position: relative;
+                padding: 3rem 3rem 7rem;
+                .menu-btn {
+                  margin-bottom: 1.6rem;
+                  position: relative;
+                  .search-mb {
+                    position: relative;
+                    .input-group {
+                      input {
+                        position: relative;
+                        height: 4.5rem;
+                        width: 4.5rem;
+                        background: transparent;
+                        border-radius: 0;
+                        border: 0.2rem solid #40403b;
+                        color: var(--white);
+                        outline: none;
+                        transition: all 0.5s;
+                        color: transparent;
+                        &:focus {
+                          width: calc(100% - 5.6rem);
+                          padding: 1.6rem;
+                          padding-left: 4rem;
+                          border-color: var(--primary-color);
+                          outline-color: var(--primary-color);
+                          color: var(--white);
+                          background-position: 1rem 50%;
+                        }
+                        background: url(https://i.postimg.cc/YCgV9bkN/image.png)
+                          no-repeat;
+                        background-size: 2.6rem;
+                        background-position: 45% 50%;
+                      }
                     }
-                  }
-                  a,
-                  span {
-                    font-size: 1.6rem;
-                    width: 100%;
-                  }
-                  i {
-                    padding: 0 2rem;
-                    transition: 0.3s;
-                    &.active {
-                      transform: rotate(90deg);
-                    }
-                  }
-                }
-                .sub-list-menu {
-                  width: 100%;
-                  height: 0;
-                  visibility: hidden;
-                  transition: 0.1s;
-                  overflow: hidden;
-                  li {
-                    a {
-                      padding: 1.3rem 0 1.5rem 5rem;
+                    .search-mb-result {
+                      margin-top: 1.6rem;
+                      position: absolute;
+                      top: 5;
+                      left: 0;
                       width: 100%;
-                    }
-                    &:hover {
-                      background: var(--primary-color);
-                      a {
-                        color: var(--white) !important;
+                      img {
+                        width: 100%;
+                      }
+                      .mb-result-wraper {
+                        height: calc(100vh - 8rem);
+                        overflow-x: hidden;
+                        overflow-y: auto;
+                        .item {
+                          padding-left: 0;
+                        }
                       }
                     }
                   }
-                  &.active {
-                    height: auto;
-                    visibility: visible;
+                  .login-mb {
+                    position: absolute;
+                    display: inline-block;
+                    right: 0;
+                    top: 0;
+                    margin-left: .6rem;
+                    .login-mb-link {
+                      width: 4.5rem;
+                      height: 4.5rem;
+                      border: 0.2rem solid #40403b;
+                      @include flex(center,center);
+                    }
+                  }
+                }
+
+                .menu-list {
+                  flex-direction: column;
+                  li {
+                    width: 100%;
+                    .link-wraper,
+                    .menu-link {
+                      padding: 1.3rem 0 1.5rem 0;
+                      width: 100%;
+                      &.cate {
+                        cursor: default;
+                      }
+                    }
+                    a,
+                    span {
+                      font-size: 1.6rem;
+                      width: 100%;
+                    }
+                    i {
+                      padding: 0 2rem;
+                      transition: 0.3s;
+                      &.active {
+                        transform: rotate(90deg);
+                      }
+                    }
+                  }
+                  .sub-list-menu {
+                    width: 100%;
+                    height: 0;
+                    visibility: hidden;
+                    transition: 0.1s;
+                    overflow: hidden;
+                    li {
+                      a {
+                        padding: 1.3rem 0 1.5rem 5rem;
+                        width: 100%;
+                      }
+                      &:hover {
+                        background: var(--primary-color);
+                        a {
+                          color: var(--white) !important;
+                        }
+                      }
+                    }
+                    &.active {
+                      height: auto;
+                      visibility: visible;
+                    }
                   }
                 }
               }
@@ -550,9 +559,9 @@ header {
           .menu-list {
             .menu-item {
               .menu-item-link {
-                width: 5.5rem;
-                height: 5.5rem;
-                line-height: 5.5rem;
+                width: 5rem;
+                height: 5rem;
+                line-height: 5rem;
                 font-size: 2.2rem;
                 .notify {
                   top: 1rem;
@@ -567,12 +576,21 @@ header {
     .header-mobile.main-hd {
       display: block;
       .main-hd-wraper {
-        padding: 0;
+        padding: 1rem 0;
         margin: 0;
         .hd-logo {
-          img {
-            width: 10rem;
-            padding: 0.6rem 0;
+          .logo-link {
+            img {
+              width: 7rem;
+            }
+            .logo-text {
+              .title {
+                font-size: 1.6rem;
+              }
+              .sub-title {
+                font-size: 0.8rem;
+              }
+            }
           }
         }
       }
