--- a/src/style/pages/productPage.scss
+++ b/src/style/pages/productPage.scss
@@ -194,6 +194,12 @@
           }
         }
       }
+      .product-wrapper {
+        .not-found {
+          @include flex(center, center);
+          margin: 20rem 0;
+        }
+      }
     }
   }
 }
